--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Lorenzo Sani's personal site
+description: This is the personal site of Lorenzo Sani alias Re Logu
